--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,5 +1,5 @@
-<p>el mensaje fue:</p>
-<!--<p>{{recibeHijo}}</p> -->
+<!--<p>el mensaje fue:</p>
+<p>{{recibeHijo}}</p> -->
 
 <div>
     <label for="entrada">Escribe un mensaje para el padre</label>
