--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -10,7 +10,8 @@
 <!--<app-hijo [recibeHijo]="mensajePadre"></app-hijo> -->
 
 <app-hermano/>
-    <h1>{{nombre}}</h1>
+<p>padre</p>
+    <h1 appEstiloHermanos>{{nombre}}</h1>
     <button type="button" (click)="saludar()">Saludar</button>
     <button type="button" (click)="preguntar()">preguntar por hijo</button>
 
