--- a/src/app/hermano/hermano.component.html
+++ b/src/app/hermano/hermano.component.html
@@ -1,5 +1,5 @@
 <p>hermano</p>
-<h1>{{nombre}}</h1>
+<h1 appEstiloHermanos>{{nombre}}</h1>
 <button type="button" (click)="saludar()">Saludar</button>
 <button type="button" (click)="preguntar()">preguntar por hijo</button>
 
