--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,26 @@
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">OyeLeo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" >home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="productos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contactos">contactos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet />
+<!--
 <main class="main">
   <div class="content">
     <div class="left-side">
@@ -56,7 +78,10 @@
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
       <div class="pill-group">
-        @for (item of [
+        <button type="button" class="btn btn-primary"> Boton de bootstrap</button>
+--> 
+
+       <!-- @for (item of [
           { title: 'Explore the Docs', link: 'https://angular.dev' },
           { title: 'Learn with Tutorials', link: 'https://angular.dev/tutorials' },
           { title: 'CLI Docs', link: 'https://angular.dev/tools/cli' },
@@ -83,8 +108,8 @@
               />
             </svg>
           </a>
-        }
-      </div>
+        }-->
+     <!--</div> 
       <div class="social-links">
         <a
           href="https://github.com/angular/angular"
@@ -149,6 +174,7 @@
     </div>
   </div>
 </main>
+--> 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
@@ -159,4 +185,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+
