--- a/src/app/hermano/hermano.component.html
+++ b/src/app/hermano/hermano.component.html
@@ -1,5 +1,5 @@
 <p>hermano</p>
 <h1 >{{nombre | miPipePersonalizado}}</h1>
-<button type="button" (click)="saludar()">Saludar</button>
-<button type="button" (click)="preguntar()">preguntar por hijo</button>
+<button type="button" class="btn btn-warning" (click)="saludar()">Saludar</button>
+<button type="button" class="btn btn-info" (click)="preguntar()">preguntar por hijo</button>
 
