--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -4,12 +4,12 @@
 <div>
     <label for="entrada">Escribe un mensaje para el padre</label>
     <input type="text" id="entrada" [(ngModel)]="mensaje">
-    <button type="button" (click)="enviarMesaje()">Enviar mensaje</button>
+    <button  type="button" class="btn btn-dark" (click)="enviarMesaje()">Enviar mensaje</button>
 </div>
-
+<br>
 <div>
 
-    <button (click)="incrementar()">Incrementar</button>
-    <button (click)="decrementar()">Decrementar</button>
+    <button class="btn btn-success" (click)="incrementar()">Incrementar</button>
+    <button class="btn btn-danger" (click)="decrementar()">Decrementar</button>
 
 </div>
