--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -1,1 +1,62 @@
 <p>contactos works!</p>
+<div class="container">
+
+ <form [formGroup]="formularioContacto" (ngSubmit)="enviar()">
+    <div class="mb-3">
+        <label for="name" class="form-label">Nombre</label>
+        <input [ngClass]="{'is-invalid': hasErrors('nombre', 'required') || hasErrors('nombre', 'minlength')}"
+         type="text" class="form-control" id="name" formControlName="nombre">
+        <div class="text-danger" *ngIf="hasErrors('nombre', 'required')"> Nombre requerido. </div>
+        <div class="text-danger" *ngIf="hasErrors('nombre', 'minlength')"> Nombre requeriere 3 caracteres. </div>
+    </div>
+    <div class="mb-3">
+        <label for="name" class="form-label">Apellido</label>
+        <input [ngClass]="{'is-invalid': hasErrors('apellido', 'required') || hasErrors('apellido', 'minlength')}"
+         type="text" class="form-control" id="name" formControlName="apellido">
+        <div class="text-danger" *ngIf="hasErrors('apellido', 'required')"> Apellido requerido. </div>
+        <div class="text-danger" *ngIf="hasErrors('apellido', 'minlength')"> Apellido requeriere 3 caracteres. </div>
+    </div>
+    <div class="mb-3">
+      <label for="tipoDni" class="form-label">Tipo de DNI:</label>
+      <select class="form-select" id="tipoDni" formControlName="tipoDni">
+        <option value="DNI">DNI </option>
+        <option value="Passport">Passport </option>
+        <option value="Cedula">Cedula </option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+        <label for="dni" class="form-label">{{tipoDni}}</label>
+        <input [ngClass]="{'is-invalid': hasErrors('dni', 'required') || hasErrors('dni', 'minlength')}"
+         type="text" class="form-control" id="name" formControlName="dni">
+        <div class="text-danger" *ngIf="hasErrors('dni', 'required')"> {{tipoDni}} requerido. </div>
+        <div class="text-danger" *ngIf="hasErrors('dni', 'minlength')"> {{tipoDni}} requeriere 3 caracteres. </div>
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input [ngClass]="{'is-invalid': hasErrors('email', 'required') || hasErrors('email', 'email')}"
+         type="email" class="form-control" id="email" formControlName="email">
+        <div class="text-danger" *ngIf="hasErrors('email', 'email')"> email invalido. </div>
+        <div class="text-danger" *ngIf="hasErrors('email', 'required')"> email requerido. </div>
+    </div>    
+        <button type="submit" class="btn btn-primary">Submit</button>
+ </form>
+
+
+<!--
+<form #myform="ngForm"(ngSubmit)="enviar()">
+    <div class="mb-3">
+        <label for="name" class="form-label">Nombre</label>
+        <input type="email" class="form-control" id="name"
+         [(ngModel)]="usuario.nombre" required [ngModelOptions]="{standalone: true}">
+      </div>
+    <div class="mb-3.formularioContacto);rmularioContacto);rmularioContacto);
+      <label for="email" class="form-label">Email</label>
+      <input type="email" class="form-control" id="email" 
+      [(ngModel)]="usuario.email" required [ngModelOptions]="{standalone: true}">
+    </div>    
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+
+-->
