--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -25,12 +25,8 @@
       </select>
     </div>
 
-    <div class="mb-3">
-        <label for="dni" class="form-label">{{tipoDni}}</label>
-        <input [ngClass]="{'is-invalid': hasErrors('dni', 'required') || hasErrors('dni', 'minlength')}"
-         type="text" class="form-control" id="name" formControlName="dni">
-        <div class="text-danger" *ngIf="hasErrors('dni', 'required')"> {{tipoDni}} requerido. </div>
-        <div class="text-danger" *ngIf="hasErrors('dni', 'minlength')"> {{tipoDni}} requeriere 3 caracteres. </div>
+    <div class="mb-3" *ngIf="mostrarDNI">
+      <dni-input [tipoDni]="tipoDni"/>
     </div>
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
